# zerochat

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Makefile  PROJECT_REVIEW.md  README.md  README.rst  chat_client.py  chat_server.py  client.py  pyproject.toml  requirements.in  requirements.txt  server.py
.github/workflows/: tests.yml
tests/: __init__.py  test_client_server.py  test_config.py  test_logging.py
zerochat/: client.py  config.py  logging.py  reader.py  server.py
